--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <header>
-    <img src="logo.png" alt="GoPatch Logo" class="logo">
+    <img src="logo_transparent.png" alt="GoPatch Logo" class="logo">
     <h1>GoPatch</h1>
     <p class="tagline">Secure. Simple. Up-to-date.</p>
 </header>
