--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <h2>What We Do</h2>
     <div class="service-grid">
       <div class="service-card">
-        <img src="https://img.icons8.com/ios-filled/100/4caf50/system-task.png" alt="Patch Management Icon">
+        <img src="/assets/icons/patch-management.png" alt="Patch Management Icon">
         <h3>Patch Management</h3>
         <p>Keep your devices secure and compliant with light-touch automated patching for Windows and Mac.</p>
         <ul>
@@ -212,7 +212,7 @@
         </ul>
       </div>
       <div class="service-card">
-        <img src="https://img.icons8.com/ios-filled/100/4caf50/consultation.png" alt="IT Consulting Icon">
+        <img src="/assets/icons/it-consulting.png" alt="IT Consulting Icon">
         <h3>IT Consulting</h3>
         <p>Strategic, no-nonsense advice from an experienced consultant working across education and SME sectors.</p>
         <ul>
@@ -222,7 +222,7 @@
         </ul>
       </div>
       <div class="service-card">
-        <img src="https://img.icons8.com/ios-filled/100/4caf50/buy.png" alt="Procurement Icon">
+        <img src="/assets/icons/it-procurement.png" alt="IT Procurement Icon">
         <h3>IT Procurement</h3>
         <p>Independent advice and end-to-end support with choosing the right technology, vendors, and services.</p>
         <ul>
@@ -232,7 +232,7 @@
         </ul>
       </div>
       <div class="service-card">
-        <img src="https://img.icons8.com/ios-filled/100/4caf50/project.png" alt="Technical Projects Icon">
+        <img src="/assets/icons/technical-projects.png" alt="Technical Projects Icon">
         <h3>Technical Projects</h3>
         <p>From infrastructure upgrades to cloud migrations—delivered with clarity, structure, and impact.</p>
         <ul>
