--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <div class="service-card">
         <img src="/assets/icons/technical-projects.png" alt="Technical Projects Icon">
         <h3>Technical Projects</h3>
-        <p>From infrastructure upgrades to cloud migrations—delivered with clarity, structure, and impact.</p>
+        <p>From infrastructure upgrades to cloud migrations, delivered with clarity, structure, and impact.</p>
         <ul>
           <li>Network & Wireless Improvements</li>
           <li>Server & Cloud Migrations</li>
