--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
     <h2>What Our Clients Say</h2>
     <div class="testimonial">
       "GoPatch made a huge difference to our IT infrastructure. Reliable, proactive and always professional."
-      <strong>– Sarah T., School Business Manager</strong>
+      <strong>– Natalie K., School Business Manager</strong>
     </div>
     <div class="testimonial">
       "Thanks to GoPatch, our patching and compliance are now fully automated. I can finally sleep at night."
-      <strong>– Mark R., IT Manager</strong>
+      <strong>– Mark S., IT Manager</strong>
     </div>
   </section>
 
