--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
       "Thanks to GoPatch, our patching and compliance are now fully automated. I can finally sleep at night."
       <strong>– Mark S., IT Manager</strong>
     </div>
+      <p style="text-align: center; font-size: 1em; color: #555; margin-top: 30px;">
+    We support clients who want clear, flexible IT, whether they manage 10 devices or 10,000.
+  </p>
   </section>
 
   <section class="contact" id="contact">
