--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
       "Thanks to GoPatch, our patching and compliance are now fully automated. I can finally sleep at night."
       <strong>– Mark S., IT Manager</strong>
     </div>
-      <p style="text-align: center; font-size: 1em; color: #555; margin-top: 30px;">
-    We support clients who want clear, flexible IT, whether they manage 10 devices or 10,000.
-  </p>
+    <p style="text-align: center; font-size: 1em; color: #555; margin-top: 30px;">
+      We support clients who want clear, flexible IT, whether they manage 10 devices or 10,000.
+    </p>
   </section>
 
   <section class="contact" id="contact">
@@ -268,10 +268,23 @@
   <footer class="footer">
     &copy; 2025 GoPatch. All rights reserved.
   </footer>
-<div id="cookie-banner" style="position: fixed; bottom: 0; left: 0; right: 0; background: #1d3a34; color: white; padding: 15px 20px; display: flex; justify-content: space-between; align-items: center; font-size: 0.9em; z-index: 9999;">
-  <span>This website uses cookies to ensure you get the best experience. <a href="#" style="color: #4CAF50; text-decoration: underline;">Learn more</a></span>
-  <button onclick="document.getElementById('cookie-banner').style.display='none'" style="background: #4CAF50; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">Got it</button>
-</div>
 
+  <div id="cookie-banner" role="dialog" aria-label="Cookie consent banner" style="position: fixed; bottom: 0; left: 0; right: 0; background: #1d3a34; color: white; padding: 15px 20px; display: none; justify-content: space-between; align-items: center; font-size: 0.9em; z-index: 9999;">
+    <span>This website uses cookies to ensure you get the best experience. <a href="/privacy-policy.html" style="color: #4CAF50; text-decoration: underline;">Learn more</a></span>
+    <button id="cookie-accept" style="background: #4CAF50; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">Got it</button>
+  </div>
+
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      if (!localStorage.getItem('cookiesAccepted')) {
+        document.getElementById('cookie-banner').style.display = 'flex';
+      }
+
+      document.getElementById('cookie-accept').addEventListener('click', () => {
+        localStorage.setItem('cookiesAccepted', 'true');
+        document.getElementById('cookie-banner').style.display = 'none';
+      });
+    });
+  </script>
 </body>
 </html>
