--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -45,7 +45,7 @@
   </ul>
 
   <h2>3. Cookies</h2>
-  <p>We use cookies to provide basic functionality and monitor usage patterns. You can manage your cookie preferences through your browser settings. See our <a href="#">Cookie Policy</a> for more details.</p>
+  <p>We use cookies to provide basic functionality and monitor usage patterns. You can manage your cookie preferences through your browser settings.</p>
 
   <h2>4. Data Retention</h2>
   <p>We retain personal data only as long as necessary for the purposes outlined in this policy or as required by applicable laws.</p>
