--- a/index.html
+++ b/index.html
@@ -199,50 +199,61 @@
     <a class="cta-button" href="#contact">Book a Free Consultation</a>
   </header>
 
-  <section class="services" id="services">
-    <h2>What We Do</h2>
-    <div class="service-grid">
-      <div class="service-card">
+<section class="services" id="services">
+  <h2>What We Do</h2>
+  <div class="service-grid">
+    <div class="service-card">
+      <a href="/patch-management.html" style="text-decoration: none; color: inherit;">
         <img src="/assets/icons/patch-management.png" alt="Patch Management Icon">
         <h3>Patch Management</h3>
-        <p>Keep your devices secure and compliant with light-touch automated patching for Windows and Mac.</p>
-        <ul>
-          <li>Secure Device Updates</li>
-          <li>Compliance & Audit Reporting</li>
-        </ul>
-      </div>
-      <div class="service-card">
+      </a>
+      <p>Keep your devices secure and compliant with light-touch automated patching for Windows and Mac.</p>
+      <ul>
+        <li>Secure Device Updates</li>
+        <li>Compliance & Audit Reporting</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <a href="/it-consulting.html" style="text-decoration: none; color: inherit;">
         <img src="/assets/icons/it-consulting.png" alt="IT Consulting Icon">
         <h3>IT Consulting</h3>
-        <p>Strategic, no-nonsense advice from an experienced consultant working across education and SME sectors.</p>
-        <ul>
-          <li>IT Strategy & Roadmaps</li>
-          <li>Budgeting & Team Structure Review</li>
-          <li>Cloud, Network & Security Guidance</li>
-        </ul>
-      </div>
-      <div class="service-card">
+      </a>
+      <p>Strategic, no-nonsense advice from an experienced consultant working across education and SME sectors.</p>
+      <ul>
+        <li>IT Strategy & Roadmaps</li>
+        <li>Budgeting & Team Structure Review</li>
+        <li>Cloud, Network & Security Guidance</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <a href="/it-procurement.html" style="text-decoration: none; color: inherit;">
         <img src="/assets/icons/it-procurement.png" alt="IT Procurement Icon">
         <h3>IT Procurement</h3>
-        <p>Independent advice and end-to-end support with choosing the right technology, vendors, and services.</p>
-        <ul>
-          <li>Device & Software Procurement</li>
-          <li>Licensing & Cost Optimisation</li>
-          <li>Supplier Vetting & Contract Reviews</li>
-        </ul>
-      </div>
-      <div class="service-card">
+      </a>
+      <p>Independent advice and end-to-end support with choosing the right technology, vendors, and services.</p>
+      <ul>
+        <li>Device & Software Procurement</li>
+        <li>Licensing & Cost Optimisation</li>
+        <li>Supplier Vetting & Contract Reviews</li>
+      </ul>
+    </div>
+
+    <div class="service-card">
+      <a href="/technical-projects.html" style="text-decoration: none; color: inherit;">
         <img src="/assets/icons/technical-projects.png" alt="Technical Projects Icon">
         <h3>Technical Projects</h3>
-        <p>From infrastructure upgrades to cloud migrations, delivered with clarity, structure, and impact.</p>
-        <ul>
-          <li>Network & Wireless Improvements</li>
-          <li>Server & Cloud Migrations</li>
-          <li>Print, MFDs & Security Rollouts</li>
-        </ul>
-      </div>
+      </a>
+      <p>From infrastructure upgrades to cloud migrations, delivered with clarity, structure, and impact.</p>
+      <ul>
+        <li>Network & Wireless Improvements</li>
+        <li>Server & Cloud Migrations</li>
+        <li>Print, MFDs & Security Rollouts</li>
+      </ul>
     </div>
-  </section>
+  </div>
+</section>
 
   <section class="testimonials" id="testimonials">
     <h2>What Our Clients Say</h2>
