--- a/patch-management.html
+++ b/patch-management.html
@@ -71,6 +71,36 @@
       text-decoration: none;
     }
 
+    .cyber-section {
+      background-color: #f4f9f4;
+      padding: 40px 20px;
+      border-radius: 12px;
+    }
+
+    .cyber-section ul {
+      list-style: none;
+      padding-left: 0;
+      max-width: 600px;
+      margin: 20px auto;
+      text-align: left;
+    }
+
+    .cyber-section li::before {
+      content: "\2713";
+      color: #4CAF50;
+      padding-right: 10px;
+    }
+
+    .cyber-section h2 {
+      text-align: center;
+    }
+
+    .cyber-section p {
+      max-width: 700px;
+      margin: 0 auto 20px;
+      text-align: center;
+    }
+
     footer {
       background-color: #1d3a34;
       color: white;
@@ -113,6 +143,18 @@
     <section>
       <h2>Why It Matters</h2>
       <p>Outdated systems are the number one target for cyber attacks. Our patch management service helps prevent breaches, data loss, and compliance failures, without burdening your in-house team.</p>
+    </section>
+
+    <section class="cyber-section">
+      <h2>Cyber Essentials Support</h2>
+      <p>Cyber Essentials is a UK government-backed scheme that helps organisations protect themselves against common cyber threats. Certification demonstrates your commitment to cybersecurity and builds trust with customers and stakeholders.</p>
+      <p>GoPatch can support you through the entire certification process:</p>
+      <ul>
+        <li>Help understanding the requirements</li>
+        <li>Technical remediations and policy guidance</li>
+        <li>Evidence gathering and form completion</li>
+      </ul>
+      <p>Whether you're securing a new contract, reducing your risk exposure, or meeting funding requirements, Cyber Essentials is a great step forward - and we’ll help you get there.</p>
     </section>
 
     <section>
