--- a/it-consulting.html
+++ b/it-consulting.html
@@ -9,8 +9,8 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #ffffff;
       color: #2c2c2c;
+      background-color: #ffffff;
     }
 
     header {
@@ -25,38 +25,43 @@
       margin-bottom: 10px;
     }
 
-    header p {
-      font-size: 1.2em;
-      max-width: 800px;
+    main {
+      max-width: 1000px;
       margin: 0 auto;
+      padding: 40px 20px;
     }
 
     section {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
+      margin-bottom: 40px;
     }
 
-    section h2 {
+    h2 {
       font-size: 1.8em;
       color: #1d3a34;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
-    ul {
-      padding-left: 20px;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
     }
 
-    li {
-      margin-bottom: 10px;
+    .card {
+      background-color: #f4f4f4;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
-    .cta {
-      text-align: center;
-      margin: 50px 0;
+    .card h3 {
+      margin-top: 0;
+      color: #1d3a34;
     }
 
-    .cta a {
+    .cta-button {
+      display: inline-block;
+      margin-top: 30px;
       padding: 12px 24px;
       background-color: #4CAF50;
       color: white;
@@ -65,50 +70,60 @@
       font-size: 1em;
       text-decoration: none;
     }
+
+    footer {
+      background-color: #1d3a34;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>IT Consulting</h1>
-    <p>Clear, strategic advice that helps schools and businesses make better IT decisions - and avoid costly mistakes.</p>
+    <p>Clear, flexible IT advice for schools and growing businesses</p>
   </header>
 
-  <section>
-    <h2>Overview</h2>
-    <p>Whether you're rethinking your IT team, planning a move to the cloud, or just trying to get the basics right, our consulting service is here to help. We listen first, then guide you through clear, structured decisions.</p>
-  </section>
+  <main>
+    <section>
+      <h2>What Is IT Consulting?</h2>
+      <p>We provide strategic, no-nonsense IT advice shaped by hands-on experience in education and business. Whether you're restructuring your team or planning for growth, we bring clarity, planning, and confidence to your decisions.</p>
+    </section>
 
-  <section>
-    <h2>What We Offer</h2>
-    <ul>
-      <li><strong>IT Strategy & Roadmapping:</strong> Define your goals and plan the right tools, timelines, and teams.</li>
-      <li><strong>Team & Budget Reviews:</strong> Identify inefficiencies and opportunities to streamline your IT spend.</li>
-      <li><strong>Cloud, Security & Network Advice:</strong> Get help making confident, modern choices in a fast-changing world.</li>
-    </ul>
-  </section>
+    <section>
+      <h2>How We Help</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Strategy & Roadmaps</h3>
+          <p>We help define practical, tailored IT strategies that support your goals, budgets, and long-term plans.</p>
+        </div>
+        <div class="card">
+          <h3>Team & Budget Reviews</h3>
+          <p>We assess team structure, job roles, and resource allocations to improve delivery and resilience.</p>
+        </div>
+        <div class="card">
+          <h3>Infrastructure & Cloud</h3>
+          <p>Guidance on infrastructure modernisation, cloud adoption, and how to make the most of your tech stack.</p>
+        </div>
+      </div>
+    </section>
 
-  <section>
-    <h2>Why It Matters</h2>
-    <p>Many organisations struggle to make sense of IT vendor promises, sales jargon, or technical change. We cut through that and focus on what matters: outcomes, risks, and value.</p>
-  </section>
+    <section>
+      <h2>Why It Matters</h2>
+      <p>Too often, IT decisions are made in a vacuum or under pressure. Our consulting gives you breathing room, a second opinion, and a structured way to align IT with your mission - without jargon or bias.</p>
+    </section>
 
-  <section>
-    <h2>Who It’s For</h2>
-    <ul>
-      <li>Leaders responsible for IT, but without a dedicated strategist</li>
-      <li>Schools balancing safeguarding, budgets, and digital delivery</li>
-      <li>SMEs with growing teams and growing technical questions</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Book a Free Consultation</h2>
+      <p>Let’s talk about your current setup, your future plans, and where we can help. No pressure, no sales tactics.</p>
+      <a class="cta-button" href="mailto:info@gopatch.uk">Email Us to Get Started</a>
+    </section>
+  </main>
 
-  <section>
-    <h2>Getting Started</h2>
-    <p>Book a no-obligation consultation to discuss your goals, priorities, and pain points. If we can help, we’ll build a short proposal outlining options and costs.</p>
-  </section>
-
-  <div class="cta">
-    <p>Let’s talk about how to make IT work better for you.</p>
-    <a href="mailto:info@gopatch.uk">Email Us</a>
-  </div>
+  <footer>
+    &copy; 2025 GoPatch. All rights reserved.
+  </footer>
 </body>
 </html>
