--- a/patch-management.html
+++ b/patch-management.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Patch Management | GoPatch</title>
+  <link rel="stylesheet" href="/style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,16 +14,8 @@
       background-color: #ffffff;
     }
 
-    header {
-      background-color: #1d3a34;
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
+    h1, h2, h3 {
+      color: #1d3a34;
     }
 
     main {
@@ -35,33 +28,17 @@
       margin-bottom: 40px;
     }
 
-    h2 {
-      font-size: 1.8em;
-      color: #1d3a34;
-      margin-bottom: 15px;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-
     .card {
       background-color: #f4f4f4;
       border-radius: 8px;
       padding: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    .card h3 {
-      margin-top: 0;
-      color: #1d3a34;
+      margin-bottom: 20px;
     }
 
     .cta-button {
       display: inline-block;
-      margin-top: 30px;
+      margin-top: 20px;
       padding: 12px 24px;
       background-color: #4CAF50;
       color: white;
@@ -71,34 +48,8 @@
       text-decoration: none;
     }
 
-    .cyber-section {
-      background-color: #f4f9f4;
-      padding: 40px 20px;
-      border-radius: 12px;
-    }
-
-    .cyber-section ul {
-      list-style: none;
-      padding-left: 0;
-      max-width: 600px;
-      margin: 20px auto;
-      text-align: left;
-    }
-
-    .cyber-section li::before {
-      content: "\2713";
-      color: #4CAF50;
-      padding-right: 10px;
-    }
-
-    .cyber-section h2 {
-      text-align: center;
-    }
-
-    .cyber-section p {
-      max-width: 700px;
-      margin: 0 auto 20px;
-      text-align: center;
+    .cta-button:hover {
+      background-color: #3c9e46;
     }
 
     footer {
@@ -111,7 +62,11 @@
   </style>
 </head>
 <body>
-  <header>
+  <!-- Shared navigation bar -->
+  <div id="navbar-placeholder"></div>
+
+  <!-- Page-specific header -->
+  <header style="background-color: #1d3a34; color: white; text-align: center; padding: 60px 20px;">
     <h1>Patch Management</h1>
     <p>Secure, automate, and simplify your device patching process</p>
   </header>
@@ -119,42 +74,39 @@
   <main>
     <section>
       <h2>What Is Patch Management?</h2>
-      <p>Patch management is the process of distributing and applying software updates to ensure devices remain secure and up-to-date. At GoPatch, we handle this for you in a low-touch, high-trust way, so you can focus on what matters.</p>
+      <p>Patch management ensures your Windows and Mac devices stay secure and up to date. At GoPatch, we handle this for you in a low-touch, high-trust way, so you can focus on what matters. :contentReference[oaicite:1]{index=1}</p>
     </section>
 
     <section>
       <h2>Our Approach</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Automated Updates</h3>
-          <p>We automate patch delivery across your Windows and Mac devices, ensuring you stay ahead of critical vulnerabilities with minimal disruption.</p>
-        </div>
-        <div class="card">
-          <h3>Compliance Support</h3>
-          <p>Need audit reports or evidence for frameworks like Cyber Essentials? We provide simple documentation and checks to support you.</p>
-        </div>
-        <div class="card">
-          <h3>Dashboard Oversight</h3>
-          <p>Gain visibility over your patch status with a shared dashboard, or let us handle it for you while keeping you in the loop.</p>
-        </div>
+      <div class="card">
+        <h3>Automated Updates</h3>
+        <p>We automate patch delivery across your Windows and Mac devices, ensuring you stay ahead of critical vulnerabilities with minimal disruption. :contentReference[oaicite:2]{index=2}</p>
+      </div>
+      <div class="card">
+        <h3>Compliance Support</h3>
+        <p>Need audit reports or evidence for frameworks like Cyber Essentials? We provide simple documentation and checks to support you. :contentReference[oaicite:3]{index=3}</p>
+      </div>
+      <div class="card">
+        <h3>Dashboard Oversight</h3>
+        <p>Gain visibility over your patch status with a shared dashboard, or let us handle it for you while keeping you in the loop. :contentReference[oaicite:4]{index=4}</p>
       </div>
     </section>
 
     <section>
       <h2>Why It Matters</h2>
-      <p>Outdated systems are the number one target for cyber attacks. Our patch management service helps prevent breaches, data loss, and compliance failures, without burdening your in-house team.</p>
+      <p>Outdated systems are the number one target for cyber attacks. Our patch management service helps prevent breaches, data loss, and compliance failures — without burdening your in-house team. :contentReference[oaicite:5]{index=5}</p>
     </section>
 
-    <section class="cyber-section">
+    <section>
       <h2>Cyber Essentials Support</h2>
-      <p>Cyber Essentials is a UK government-backed scheme that helps organisations protect themselves against common cyber threats. Certification demonstrates your commitment to cybersecurity and builds trust with customers and stakeholders.</p>
-      <p>GoPatch can support you through the entire certification process:</p>
+      <p>Cyber Essentials is a UK government-backed scheme helping organisations protect against common cyber threats. Certification builds trust and demonstrates cybersecurity commitment. :contentReference[oaicite:6]{index=6}</p>
       <ul>
         <li>Help understanding the requirements</li>
         <li>Technical remediations and policy guidance</li>
         <li>Evidence gathering and form completion</li>
       </ul>
-      <p>Whether you're securing a new contract, reducing your risk exposure, or meeting funding requirements, Cyber Essentials is a great step forward - and we’ll help you get there.</p>
+      <p>Whether you're securing a new contract, reducing risk exposure, or meeting funding requirements, Cyber Essentials is a great step forward — and we’ll help you get there. :contentReference[oaicite:7]{index=7}</p>
     </section>
 
     <section>
@@ -167,5 +119,8 @@
   <footer>
     &copy; 2025 GoPatch. All rights reserved.
   </footer>
+
+  <!-- Navbar loader -->
+  <script src="/scripts/navbar.js"></script>
 </body>
 </html>
