--- a/index.html
+++ b/index.html
@@ -196,64 +196,64 @@
   <header>
     <h1>Secure. Simplify. Scale.</h1>
     <p>Helping schools and small businesses stay secure, up-to-date, and on-track with expert IT consulting, procurement, and patch management.</p>
-    <a class="cta-button" href="#contact">Book a Free Consultation</a>
+    <a class="cta-button" href="/contact.html">Book a Free Consultation</a>
   </header>
 
-<section class="services" id="services">
-  <h2>What We Do</h2>
-  <div class="service-grid">
-    <div class="service-card">
-      <a href="/patch-management.html" style="text-decoration: none; color: inherit;">
-        <img src="/assets/icons/patch-management.png" alt="Patch Management Icon">
-        <h3>Patch Management</h3>
-      </a>
-      <p>Keep your devices secure and compliant with light-touch automated patching for Windows and Mac.</p>
-      <ul>
-        <li>Secure Device Updates</li>
-        <li>Compliance & Audit Reporting</li>
-      </ul>
-    </div>
+  <section class="services" id="services">
+    <h2>What We Do</h2>
+    <div class="service-grid">
+      <div class="service-card">
+        <a href="/patch-management.html" style="text-decoration: none; color: inherit;">
+          <img src="/assets/icons/patch-management.png" alt="Patch Management Icon">
+          <h3>Patch Management</h3>
+        </a>
+        <p>Keep your devices secure and compliant with light-touch automated patching for Windows and Mac.</p>
+        <ul>
+          <li>Secure Device Updates</li>
+          <li>Compliance & Audit Reporting</li>
+        </ul>
+      </div>
 
-    <div class="service-card">
-      <a href="/it-consulting.html" style="text-decoration: none; color: inherit;">
-        <img src="/assets/icons/it-consulting.png" alt="IT Consulting Icon">
-        <h3>IT Consulting</h3>
-      </a>
-      <p>Strategic, no-nonsense advice from an experienced consultant working across education and SME sectors.</p>
-      <ul>
-        <li>IT Strategy & Roadmaps</li>
-        <li>Budgeting & Team Structure Review</li>
-        <li>Cloud, Network & Security Guidance</li>
-      </ul>
-    </div>
+      <div class="service-card">
+        <a href="/it-consulting.html" style="text-decoration: none; color: inherit;">
+          <img src="/assets/icons/it-consulting.png" alt="IT Consulting Icon">
+          <h3>IT Consulting</h3>
+        </a>
+        <p>Strategic, no-nonsense advice from an experienced consultant working across education and SME sectors.</p>
+        <ul>
+          <li>IT Strategy & Roadmaps</li>
+          <li>Budgeting & Team Structure Review</li>
+          <li>Cloud, Network & Security Guidance</li>
+        </ul>
+      </div>
 
-    <div class="service-card">
-      <a href="/it-procurement.html" style="text-decoration: none; color: inherit;">
-        <img src="/assets/icons/it-procurement.png" alt="IT Procurement Icon">
-        <h3>IT Procurement</h3>
-      </a>
-      <p>Independent advice and end-to-end support with choosing the right technology, vendors, and services.</p>
-      <ul>
-        <li>Device & Software Procurement</li>
-        <li>Licensing & Cost Optimisation</li>
-        <li>Supplier Vetting & Contract Reviews</li>
-      </ul>
-    </div>
+      <div class="service-card">
+        <a href="/it-procurement.html" style="text-decoration: none; color: inherit;">
+          <img src="/assets/icons/it-procurement.png" alt="IT Procurement Icon">
+          <h3>IT Procurement</h3>
+        </a>
+        <p>Independent advice and end-to-end support with choosing the right technology, vendors, and services.</p>
+        <ul>
+          <li>Device & Software Procurement</li>
+          <li>Licensing & Cost Optimisation</li>
+          <li>Supplier Vetting & Contract Reviews</li>
+        </ul>
+      </div>
 
-    <div class="service-card">
-      <a href="/technical-projects.html" style="text-decoration: none; color: inherit;">
-        <img src="/assets/icons/technical-projects.png" alt="Technical Projects Icon">
-        <h3>Technical Projects</h3>
-      </a>
-      <p>From infrastructure upgrades to cloud migrations, delivered with clarity, structure, and impact.</p>
-      <ul>
-        <li>Network & Wireless Improvements</li>
-        <li>Server & Cloud Migrations</li>
-        <li>Print, MFDs & Security Rollouts</li>
-      </ul>
+      <div class="service-card">
+        <a href="/technical-projects.html" style="text-decoration: none; color: inherit;">
+          <img src="/assets/icons/technical-projects.png" alt="Technical Projects Icon">
+          <h3>Technical Projects</h3>
+        </a>
+        <p>From infrastructure upgrades to cloud migrations, delivered with clarity, structure, and impact.</p>
+        <ul>
+          <li>Network & Wireless Improvements</li>
+          <li>Server & Cloud Migrations</li>
+          <li>Print, MFDs & Security Rollouts</li>
+        </ul>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <section class="testimonials" id="testimonials">
     <h2>What Our Clients Say</h2>
@@ -271,9 +271,12 @@
   </section>
 
   <section class="contact" id="contact">
-    <h2>Contact Us</h2>
-    <p>Interested in working together? Get in touch and we'll get back to you shortly.</p>
-    <a class="cta-button" href="mailto:info@gopatch.uk">Email Us</a>
+    <h2>Get in Touch</h2>
+    <p>Have a question or want to discuss your IT needs? You can send us a message or book a free 15-minute call below.</p>
+    <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
+      <a class="cta-button" href="/contact.html">Send a Message</a>
+      <a class="cta-button" style="background-color: #ffffff; color: #1d3a34; border: 2px solid #1d3a34;" href="/contact.html#calendly">Book a Call</a>
+    </div>
   </section>
 
   <footer class="footer">
