--- a/it-procurement.html
+++ b/it-procurement.html
@@ -1,67 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IT Procurement | GoPatch</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Patch Management | GoPatch</title>
+  <link rel="stylesheet" href="/style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
       color: #2c2c2c;
       background-color: #ffffff;
     }
-
-    header {
-      background-color: #1d3a34;
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
+    h1, h2, h3 {
+      color: #1d3a34;
     }
-
-    header h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-
     main {
       max-width: 1000px;
       margin: 0 auto;
       padding: 40px 20px;
     }
-
     section {
       margin-bottom: 40px;
     }
-
-    h2 {
-      font-size: 1.8em;
-      color: #1d3a34;
-      margin-bottom: 15px;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-
     .card {
       background-color: #f4f4f4;
       border-radius: 8px;
       padding: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
     }
-
-    .card h3 {
-      margin-top: 0;
-      color: #1d3a34;
-    }
-
     .cta-button {
       display: inline-block;
-      margin-top: 30px;
+      margin: 20px 10px 0;
       padding: 12px 24px;
       background-color: #4CAF50;
       color: white;
@@ -70,7 +41,14 @@
       font-size: 1em;
       text-decoration: none;
     }
-
+    .cta-button.secondary {
+      background-color: white;
+      color: #1d3a34;
+      border: 2px solid #1d3a34;
+    }
+    .cta-button:hover {
+      background-color: #3c9e46;
+    }
     footer {
       background-color: #1d3a34;
       color: white;
@@ -81,49 +59,62 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>IT Procurement</h1>
-    <p>Find the right tech, vendors, and contracts with confidence</p>
+  <div id="navbar-placeholder"></div>
+
+  <header style="background-color:#1d3a34; color:white; text-align:center; padding:60px 20px;">
+    <h1>Patch Management</h1>
+    <p>Secure, automate, and simplify your device patching process</p>
   </header>
 
   <main>
     <section>
-      <h2>What Is IT Procurement?</h2>
-      <p>IT procurement covers the selection, evaluation, and purchasing of technology to support your organisation's goals. GoPatch helps you make informed decisions that fit your needs and budget - with no vendor lock-in or hidden costs.</p>
+      <h2>What Is Patch Management?</h2>
+      <p>Patch management is the process of distributing and applying software updates to ensure devices remain secure and up-to-date. At GoPatch, we handle this for you in a low‑touch, high‑trust way, so you can focus on what matters.</p>
     </section>
 
     <section>
-      <h2>How We Help</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Hardware & Software Selection</h3>
-          <p>From devices to cloud platforms, we help you choose fit-for-purpose technology tailored to your environment.</p>
-        </div>
-        <div class="card">
-          <h3>Licensing & Cost Optimisation</h3>
-          <p>We review existing contracts and recommend ways to reduce spend without sacrificing performance or compliance.</p>
-        </div>
-        <div class="card">
-          <h3>Vendor & Contract Review</h3>
-          <p>Independent vetting of suppliers and services to ensure fair pricing, reliable support, and scalable agreements.</p>
-        </div>
+      <h2>Our Approach</h2>
+      <div class="card">
+        <h3>Automated Updates</h3>
+        <p>We automate patch delivery across your Windows and Mac devices, ensuring you stay ahead of critical vulnerabilities with minimal disruption.</p>
+      </div>
+      <div class="card">
+        <h3>Compliance Support</h3>
+        <p>Need audit reports or evidence for frameworks like Cyber Essentials? We provide simple documentation and checks to support you.</p>
+      </div>
+      <div class="card">
+        <h3>Dashboard Oversight</h3>
+        <p>Gain visibility over your patch status with a shared dashboard, or let us handle it for you while keeping you in the loop.</p>
       </div>
     </section>
 
     <section>
       <h2>Why It Matters</h2>
-      <p>Without guidance, procurement can lead to waste, complexity, or misaligned services. We make the process transparent and strategic - helping you avoid common pitfalls and stay focused on delivery.</p>
+      <p>Outdated systems are the number one target for cyber attacks. Our patch management service helps prevent breaches, data loss, and compliance failures—without burdening your in‑house team.</p>
     </section>
 
     <section>
-      <h2>Book a Free Consultation</h2>
-      <p>We're here to support schools, charities, and SMEs who want clarity and confidence in their IT investments.</p>
-      <a class="cta-button" href="mailto:info@gopatch.uk">Email Us to Get Started</a>
+      <h2>Cyber Essentials Support</h2>
+      <p>Cyber Essentials is a UK government-backed scheme that helps organisations protect themselves against common cyber threats. Certification demonstrates your commitment to cybersecurity and builds trust with customers and stakeholders.</p>
+      <ul>
+        <li>Help understanding the requirements</li>
+        <li>Technical remediations and policy guidance</li>
+        <li>Evidence gathering and form completion</li>
+      </ul>
+      <p>Whether you're securing a new contract, reducing your risk exposure, or meeting funding requirements, Cyber Essentials is a great step forward, and we’ll help you get there.</p>
+    </section>
+
+    <section style="text-align:center;">
+      <h2>Ready to Get Started?</h2>
+      <a href="/contact.html" class="cta-button">Send a Message</a>
+      <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
     </section>
   </main>
 
   <footer>
     &copy; 2025 GoPatch. All rights reserved.
   </footer>
+
+  <script src="/scripts/navbar.js"></script>
 </body>
 </html>
