--- a/it-procurement.html
+++ b/it-procurement.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Patch Management | GoPatch</title>
+  <title>IT Procurement | GoPatch</title>
   <link rel="stylesheet" href="/style.css" />
   <style>
     body {
@@ -62,46 +62,35 @@
   <div id="navbar-placeholder"></div>
 
   <header style="background-color:#1d3a34; color:white; text-align:center; padding:60px 20px;">
-    <h1>Patch Management</h1>
-    <p>Secure, automate, and simplify your device patching process</p>
+    <h1>IT Procurement</h1>
+    <p>Find the right tech, vendors, and contracts with confidence</p>
   </header>
 
   <main>
     <section>
-      <h2>What Is Patch Management?</h2>
-      <p>Patch management is the process of distributing and applying software updates to ensure devices remain secure and up-to-date. At GoPatch, we handle this for you in a low‑touch, high‑trust way, so you can focus on what matters.</p>
+      <h2>What Is IT Procurement?</h2>
+      <p>IT procurement is the process of selecting, evaluating, and purchasing technology that supports your organisation’s goals. GoPatch helps you make informed decisions that fit your needs and budget—with no vendor lock‑in or hidden costs.</p>
     </section>
 
     <section>
-      <h2>Our Approach</h2>
+      <h2>How We Help</h2>
       <div class="card">
-        <h3>Automated Updates</h3>
-        <p>We automate patch delivery across your Windows and Mac devices, ensuring you stay ahead of critical vulnerabilities with minimal disruption.</p>
+        <h3>Hardware & Software Selection</h3>
+        <p>From devices to cloud platforms, we help you choose fit‑for‑purpose technology tailored to your environment.</p>
       </div>
       <div class="card">
-        <h3>Compliance Support</h3>
-        <p>Need audit reports or evidence for frameworks like Cyber Essentials? We provide simple documentation and checks to support you.</p>
+        <h3>Licensing & Cost Optimisation</h3>
+        <p>We review existing contracts and recommend ways to reduce spend without sacrificing performance or compliance.</p>
       </div>
       <div class="card">
-        <h3>Dashboard Oversight</h3>
-        <p>Gain visibility over your patch status with a shared dashboard, or let us handle it for you while keeping you in the loop.</p>
+        <h3>Vendor & Contract Review</h3>
+        <p>Independent vetting of suppliers and services to ensure fair pricing, reliable support, and scalable agreements.</p>
       </div>
     </section>
 
     <section>
       <h2>Why It Matters</h2>
-      <p>Outdated systems are the number one target for cyber attacks. Our patch management service helps prevent breaches, data loss, and compliance failures—without burdening your in‑house team.</p>
-    </section>
-
-    <section>
-      <h2>Cyber Essentials Support</h2>
-      <p>Cyber Essentials is a UK government-backed scheme that helps organisations protect themselves against common cyber threats. Certification demonstrates your commitment to cybersecurity and builds trust with customers and stakeholders.</p>
-      <ul>
-        <li>Help understanding the requirements</li>
-        <li>Technical remediations and policy guidance</li>
-        <li>Evidence gathering and form completion</li>
-      </ul>
-      <p>Whether you're securing a new contract, reducing your risk exposure, or meeting funding requirements, Cyber Essentials is a great step forward, and we’ll help you get there.</p>
+      <p>Without guidance, procurement can lead to waste, complexity, or misaligned services. We make the process transparent and strategic—helping you avoid common pitfalls and stay focused on delivery.</p>
     </section>
 
     <section style="text-align:center;">
