--- a/technical-projects.html
+++ b/technical-projects.html
@@ -1,67 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Technical Projects | GoPatch</title>
+  <link rel="stylesheet" href="/style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
       color: #2c2c2c;
       background-color: #ffffff;
     }
-
-    header {
-      background-color: #1d3a34;
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
+    h1, h2, h3 {
+      color: #1d3a34;
     }
-
-    header h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-
     main {
       max-width: 1000px;
       margin: 0 auto;
       padding: 40px 20px;
     }
-
     section {
       margin-bottom: 40px;
     }
-
-    h2 {
-      font-size: 1.8em;
-      color: #1d3a34;
-      margin-bottom: 15px;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-
     .card {
       background-color: #f4f4f4;
       border-radius: 8px;
       padding: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+      text-align: left;
     }
-
     .card h3 {
       margin-top: 0;
-      color: #1d3a34;
     }
-
     .cta-button {
       display: inline-block;
-      margin-top: 30px;
+      margin: 20px 10px 0;
       padding: 12px 24px;
       background-color: #4CAF50;
       color: white;
@@ -70,7 +45,14 @@
       font-size: 1em;
       text-decoration: none;
     }
-
+    .cta-button.secondary {
+      background-color: white;
+      color: #1d3a34;
+      border: 2px solid #1d3a34;
+    }
+    .cta-button:hover {
+      background-color: #3c9e46;
+    }
     footer {
       background-color: #1d3a34;
       color: white;
@@ -81,49 +63,51 @@
   </style>
 </head>
 <body>
-  <header>
+  <div id="navbar-placeholder"></div>
+
+  <header style="background-color:#1d3a34; color:white; text-align:center; padding:60px 20px;">
     <h1>Technical Projects</h1>
-    <p>Clear, structured IT project delivery - without the jargon</p>
+    <p>Delivering structured, high-impact infrastructure and cloud projects</p>
   </header>
 
   <main>
     <section>
-      <h2>What Are Technical Projects?</h2>
-      <p>Whether you're upgrading infrastructure, migrating to the cloud, or rolling out new devices, our technical project service is about delivering change confidently - on time, on budget, and without surprises.</p>
+      <h2>What We Do</h2>
+      <p>From network refreshes to cloud migrations and security rollouts, we manage your technical projects with clarity, structure and minimal disruption.</p>
     </section>
 
     <section>
-      <h2>How We Help</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Network & Infrastructure</h3>
-          <p>Switch upgrades, Wi-Fi redesigns, or structured cabling - we assess, scope, and coordinate improvements end to end.</p>
-        </div>
-        <div class="card">
-          <h3>Cloud & Server Migrations</h3>
-          <p>From on-prem to Azure or hybrid setups, we plan and deliver cloud transitions with clear documentation and testing.</p>
-        </div>
-        <div class="card">
-          <h3>Rollouts & Refreshes</h3>
-          <p>Deploying new devices, security tools or print systems? We handle the technical planning and ensure seamless rollout.</p>
-        </div>
+      <h2>Typical Projects</h2>
+      <div class="card">
+        <h3>Network & Wireless Improvements</h3>
+        <p>Designing and implementing improved network infrastructure and Wi‑Fi across schools and SMEs.</p>
+      </div>
+      <div class="card">
+        <h3>Server & Cloud Migrations</h3>
+        <p>Planning, migrating and optimising Microsoft or Linux server environments on-prem or in the cloud.</p>
+      </div>
+      <div class="card">
+        <h3>Print, Security & Device Rollouts</h3>
+        <p>Coordinating new hardware projects, secure device deployment and managed print services.</p>
       </div>
     </section>
 
     <section>
       <h2>Why It Matters</h2>
-      <p>Poorly managed projects cost time, money, and trust. We take a structured, practical approach that balances your business needs with technical requirements - making change easier for everyone.</p>
+      <p>Well-executed projects reduce downtime, limit risk, and ensure your tech environment supports your organisation — not distracts from it.</p>
     </section>
 
-    <section>
-      <h2>Book a Free Consultation</h2>
-      <p>Planning a change or just want an extra pair of eyes? Let's talk about how we can support your next project.</p>
-      <a class="cta-button" href="mailto:info@gopatch.uk">Get in Touch</a>
+    <section style="text-align:center;">
+      <h2>Ready to Get Started?</h2>
+      <a href="/contact.html" class="cta-button">Send a Message</a>
+      <a href="/contact.html#calendly" class="cta-button secondary">Book a Free Call</a>
     </section>
   </main>
 
   <footer>
     &copy; 2025 GoPatch. All rights reserved.
   </footer>
+
+  <script src="/scripts/navbar.js"></script>
 </body>
 </html>
